--- a/invento18/static/invento19/css/component.css
+++ b/invento18/static/invento19/css/component.css
@@ -343,6 +343,7 @@ html.js,
 	.js .pages-nav {
 		display: block;
 		padding: 10px 20px 0 20px;
+		height: 45vh;
 		/* text-align: left; */
 	}
 	.js .pages-nav__item {
@@ -367,5 +368,9 @@ html.js,
 	}
 	.poster {
 		margin: 1em;
+	}
+	.link
+	{
+		font-size: 0.65em;
 	}
 }
