--- a/invento18/static/invento19/css/style.css
+++ b/invento18/static/invento19/css/style.css
@@ -494,7 +494,7 @@ transition: 0.5s;
     text-align: center;
     line-height: 40px !important;
     font-size: 25px !important;
-    border-radius: 25px;
+    border-radius: 10px;
 
 }
 .fa.fa1
@@ -534,6 +534,7 @@ transition: 0.5s;
     font-size: 30px;
     font-weight: 600;
     color: #fff;
+    text-transform: uppercase;
 }
 
 .lineup-artists-description .entry-content {
@@ -613,7 +614,7 @@ transition: 0.5s;
     padding: 0;
     font-size: 14px;
     font-weight: 600;
-    color: hsl(0, 0%, 48%);
+    color: #e52828;
 }
 
 .the-complete-lineup .entry-title h2 {
@@ -666,10 +667,10 @@ transition: 0.5s;
 
 .the-complete-lineup-artists .artist-single h2 {
     margin-top: 38px;
-    font-size: 24px;
-    font-weight: 600;
-    color: hsl(0, 0%, 2%);
+    font-size: 20px;
+    color: #e52828;
     text-align: center;
+    text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px) {
